[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ui/play.png" type="Texture" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/music-enabled.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/ice_pixel-7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/pause.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/pause-hover.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/music-disabled.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/music-hover.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=8]
size = 60
outline_size = 1
outline_color = Color( 0.203125, 0.203125, 0.203125, 1 )
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
RichTextLabel/fonts/normal_font = SubResource( 8 )

[node name="GUI" type="Node2D"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 1255.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1230.0
margin_bottom = 75.0

[node name="TimeLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
margin_right = 305.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
text = "Time:"

[node name="NeighborLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
margin_left = 309.0
margin_right = 920.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = SubResource( 2 )
text = "Neighbors Left: 6"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 924.0
margin_right = 1230.0
margin_bottom = 75.0
size_flags_horizontal = 3
columns = 3

[node name="PauseButton" type="TextureButton" parent="MarginContainer/HBoxContainer/GridContainer"]
margin_right = 100.0
margin_bottom = 75.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="MusicButton" type="TextureButton" parent="MarginContainer/HBoxContainer/GridContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 75.0
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/GridContainer/PauseButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/GridContainer/PauseButton" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/GridContainer/PauseButton" to="." method="_on_PauseButton_toggled"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/GridContainer/MusicButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/GridContainer/MusicButton" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/GridContainer/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
